@@ -1,0 +1,44 @@
+---
+http_interactions:
+- request:
+    method: get
+    uri: http://a.pubnub.com/publish/demo/demo/0/hello_world/0/%22hi%22
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers: {}
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      !binary "RGF0ZQ==":
+      - !binary |-
+        VHVlLCAyNiBGZWIgMjAxMyAyMjoyMzo1NiBHTVQ=
+      !binary "Q29udGVudC1UeXBl":
+      - !binary |-
+        dGV4dC9qYXZhc2NyaXB0OyBjaGFyc2V0PSJVVEYtOCI=
+      !binary "Q29udGVudC1MZW5ndGg=":
+      - !binary |-
+        MzA=
+      !binary "Q29ubmVjdGlvbg==":
+      - !binary |-
+        Y2xvc2U=
+      !binary "Q2FjaGUtQ29udHJvbA==":
+      - !binary |-
+        bm8tY2FjaGU=
+      !binary "QWNjZXNzLUNvbnRyb2wtQWxsb3ctT3JpZ2lu":
+      - !binary |-
+        Kg==
+      !binary "QWNjZXNzLUNvbnRyb2wtQWxsb3ctTWV0aG9kcw==":
+      - !binary |-
+        R0VU
+      !binary "UG4tVHQ=":
+      - !binary |-
+        MTM2MTkxNzQzNjAyNDc1Nzc=
+    body:
+      encoding: US-ASCII
+      string: ! '[1,"Sent","13619174360247577"]'
+    http_version: 
+  recorded_at: Tue, 26 Feb 2013 22:23:56 GMT
+recorded_with: VCR 2.2.4
