@@ -5,7 +5,7 @@
 
 Gem::Specification.new do |s|
   s.name = "pubnub"
-  s.version = "3.3.0.4"
+  s.version = "3.3.0.5"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["PubNub"]
