@@ -29,6 +29,18 @@ describe "Subscribe Integration Test" do
 
           end
 
+          it "should allow a custom origin at subscribe time" do
+            my_response = [[], "13619080213373042"]
+            mock(@my_callback).call(my_response) {EM.stop}
+
+            VCR.use_cassette("integration_subscribe_6", :record => :none) do
+              @pn.subscribe(:origin => "myorigin.pubnub.com", :channel => :hello_world, :callback => @my_callback)
+            end
+
+            # Test will fail if origin breaks per VCR tape
+
+          end
+
           it "should retry on a non 200 server response" do
             my_response = [[], "13617798873598999"]
             mock(@my_callback).call(my_response) {EM.stop}
@@ -69,6 +81,21 @@ describe "Subscribe Integration Test" do
       context "on the subsequent timetoken fetch" do
 
         context "with basic subscribe config" do
+
+
+          it "should continue with a custom origin" do
+            my_response = [[], "13619080213373042"]
+            mock(@my_callback).call(my_response) {}
+            mock(@my_callback).call(my_response) {EM.stop}
+
+            VCR.use_cassette("integration_subscribe_7", :record => :none) do
+              @pn.subscribe(:origin => "myorigin.pubnub.com", :channel => :hello_world, :callback => @my_callback)
+            end
+
+            # Test will fail if origin breaks per VCR tape
+
+          end
+
 
           it "should sub without ssl" do
             my_response = [[{"text" => "bo"}], "13455067954018816"]
